--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,25 +59,15 @@ body {
   flex-wrap: wrap;
 }
 
-.welcomeBox{
+ .welcomeBox{
     position: absolute;
     width: 60vw;
-    height: 60vh;
-    top: -2%;
-}
-
-.quizSettingBox {
-  width: 60vw;
-  height: 60vh;
-  border-radius: 20px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    height: 20vh;
+    top: 15%;
 }
 
 svg {
-  font: 10em Ubuntu;
+  font: 25em Ubuntu;
   letter-spacing: 0.15em;
   width: 100%;
   height: 100%;
@@ -111,4 +101,21 @@ svg text {
   100% {
     stroke-width: 0;
   }
+}
+
+.quizSettingBox {
+  width: 60vw;
+  height: 60vh;
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.quizSettingBoxInput{
+  margin-top: 15%;
+  width: 80%;
 }
