--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,12 +45,46 @@ body {
 .quizBox {
   width: 80vw;
   height: 80vh;
-  background-color: #eef2f3;
+  background-color: rgba(238, 242, 243, 0.8);
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 15px;
   border: 2px gray solid;
   display: flex;
   justify-items: center;
+  text-align: center;
+  z-index: 1;
+}
+.progress {
+  margin: 15px 50px;
+  height: 1.5rem;
+}
+.rowBg {
+  margin: 0 10px;
+  border: solid 1px gray;
+  border-radius: 5px;
+  font-size: 18px;
+  font-weight: 600;
+}
+.colBg {
+  margin: 5px;
+  border: solid 1px gray;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  min-height: 2.5rem;
+}
+.detail {
+  background-color: rgba(128, 128, 128, 0.2);
+  padding: 0 15px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.detailInfo {
+  width: 100%;
 }
 
 /* quiz setting container style */
@@ -63,6 +97,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  z-index: 2;
 }
 
 /* welcome text style and animation */
@@ -94,13 +129,13 @@ svg text {
     stroke-dasharray: 0% 100%;
   }
   25% {
-    stroke-width: 3px;
+    stroke-width: 10px;
   }
   50% {
     fill-opacity: 0;
   }
   75% {
-    stroke-width: 3px;
+    stroke-width: 10px;
   }
   100% {
     stroke-width: 0;
