--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,8 +55,9 @@ body {
   z-index: 1;
 }
 .progress {
-  margin: 15px 50px;
+  margin: 25px 50px;
   height: 1.5rem;
+  border: solid 2px rgb(13, 202, 240);
 }
 .rowBg {
   margin: 0 10px;
@@ -82,9 +83,33 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .detailInfo {
   width: 100%;
+}
+
+.quiz {
+  margin: 25px 10px;
+}
+.quizColBg {
+  margin: 5px;
+  border: solid 1px gray;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: grid;
+  padding: 0;
+  min-height: 2.5rem;
+}
+
+.answer {
+  width: 100%;
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+}
+.answer .answerChek {
+  margin: 5px;
 }
 
 /* quiz setting container style */
