--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,7 +158,7 @@ body {
   top: 15%;
 }
 svg {
-  font: 25em Ubuntu;
+  font: 30vmax Ubuntu;
   letter-spacing: 0.15em;
   width: 100%;
   height: 100%;
@@ -213,6 +213,104 @@ svg text {
 .quizSettingBoxInput button {
   font-size: 1.5em;
   font-weight: 700;
+}
+
+/* correct answer animaeion */
+.correct {
+  position: absolute;
+  top: 30%;
+  z-index: 5;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  width: 35vmax;
+  height: 35vmax;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.correctCircle {
+  position: relative;
+  border-radius: 50%;
+  width: 70%;
+  height: 70%;
+  box-shadow: inset 0 0 0 2px #198754;
+  animation: filling 0.2s ease-in 0.8s forwards;
+}
+.cover1,
+.cover2 {
+  position: absolute;
+  overflow: hidden;
+  width: 50%;
+  height: 100%;
+}
+.cover1 {
+  left: 50%;
+}
+.cover1:before,
+.cover2:before {
+  position: absolute;
+  content: "";
+}
+.cover1:before {
+  width: 100%;
+  height: 200%;
+  background: #ffffff;
+  transform-origin: 0 25%;
+  animation: draw 0.3s linear forwards;
+}
+.cover2:before {
+  left: -10%;
+  width: 110%;
+  height: 120%;
+  background: #ffffff;
+  transform-origin: 100% 40%;
+  animation: draw 0.3s ease-out 0.3s forwards;
+}
+.correctMark {
+  position: absolute;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  font-size: 10rem;
+  line-height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  animation: check 0.3s ease-in-out 0.9s forwards;
+}
+@keyframes draw {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+@keyframes filling {
+  0% {
+    box-shadow: inset 0 0 0 9px #198754;
+  }
+  100% {
+    box-shadow: inset 0 0 0 150px #198754;
+  }
+}
+@keyframes check {
+  0% {
+    transform: scale(0.5) rotate(30deg);
+    opacity: 0;
+  }
+  90% {
+    transform: scale(1.3) rotate(-15deg);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1) rotate(0deg);
+    opacity: 1;
+  }
 }
 
 /* hidden box */
